2011-05-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/stats/random/rlnorm.h: Repaired accidental header
	guard from 'norm' to 'lnorm' so that the file really gets included,
	make several calls to standard library'exp()' explicit as '::exp()'
	and fixed a cut-and-paste typo

2011-05-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/internal/wrap.h: For arguments of type const char *,
	wrap now checks for NULL arguments before calling Rf_mkString()
	* unitTests/runit.wrap.R: Added unit test for this

2011-05-14  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-quickref/Rcpp-quickref.Rnw: Corrected an error in STL
	example and added two more STL examples

2011-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/OpenMP/piWithInterrupts.cpp: Beginnings of new
	contributed example on OpenMP as well as user interrupt handling

2011-04-26  Romain Francois  <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/functions/mean.h: new sugar function: mean

	* inst/include/Rcpp/sugar/functions/var.h: new sugar function: var

	* inst/include/Rcpp/sugar/functions/sd.h: new sugar function: sd

2011-04-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: New example setting row and column
	names for matrices

2011-04-16  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: New example using Rcpp.plugin.maker

2011-04-12  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.4
        * inst/NEWS: Release 0.9.4
        * inst/include/Rcpp/config.h: Release 0.9.4
        * debian/*: Similarly updated for new release to Debian

2011-04-12  Romain Francois  <romain@r-enthusiasts.com>

	* inst/unitTests/testRcppModules/src/stdVector.cpp: compiler
	disambiguation

	* src/r_cast.cpp: use a callback to R's "as.character" instead of
	calling Rf_coerceVector, which did not work as expected for factors

2011-04-11  Romain Francois  <romain@r-enthusiasts.com>
